harden cross-platform executable examples